--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -57,19 +57,19 @@
         <div class="col-lg-4">
           <a href="<%= schools_path %>"><img class="img-circle" src="assets/school.jpg"></a></br></br>
           <h2>Schools</h2>
-          <p>A school is an institution designed for the teaching of students (or "pupils") under the direction of teachers. We have lot of good schools in this city and also the provided formal and excelent education to chilldrens. If you want to known list of schools click below button.</p>
+          <p>A school is an institution designed for teaching of students (or "pupils") under the direction of teachers. We have lot of good schools in this city and also provided formal and excellent education to childrens. If you want to know the list of schools, click below button.</p>
           <p><a class="btn btn-default" href="<%= schools_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="<%= hospitals_path %>"><img class="img-circle" src="assets/hospital.jpg"></a>
           <h2>Hospitals</h2>
-          <p>A hospital is a health care institution providing patient treatment with specialised staff and equipment. In Pandavapura we can see good and well facilitate hospitals. And also we can see many nursing homes. If you want to see list of hospitals click below button.</p>
+          <p>A hospital is a health care institution providing patient treatment with specialised staff and equipment. In Pandavapura, we can see good and well facilitated hospitals. And also, we can see many nursing homes. If you want to see list of hospitals, click below button.</p>
           <p><a class="btn btn-default" href="<%= hospitals_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="<%= tourist_places_path %>"><img class="img-circle" src="assets/melukote.jpg"></a>
           <h2>Tourist Places</h2>
-          <p>Pandavapura is a narmal city, it is not a tourist place but many touriest places are there near to city. Melukote, KRS, Kerethonnur and Kunthi betta are some of the places. Please click below button to see list of touriest places. </p>
+          <p>Pandavapura is a normal city, it is not a tourist place but there are many touriest places near to the city like Melukote, KRS, Kerethonnur and Kunthi betta. Please click below button to see list of tourist places. </p>
           <p><a class="btn btn-default" href="<%= tourist_places_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -82,7 +82,7 @@
       <div class="row featurette">
         <div class="col-md-6">
           <h2 class="featurette-heading">Governament Bus Stand. <span class="text-muted">It'll blow your mind.</span></h2>
-          <div class="lead">Bus service is provided by KSRTC runs buses that connect Pandavapura to other places in Karnataka and a few buses to other states. It was started service on 2007 inagurated by Kumaraswamy former chief minster Karnataka governament.</div>
+          <div class="lead">Bus service is provided by KSRTC, runs buses that connect Pandavapura to other places in Karnataka and a few buses to other states. The service was started in 2007, inagurated by H D Kumaraswamy, former chief minister of Karnataka governament.</div>
           <p><a class="btn btn-default" href="<%= buses_path %>" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6">
@@ -98,7 +98,7 @@
         </div>
         <div class="col-md-6">
           <h2 class="featurette-heading">Railway Station. <span class="text-muted">Go where you want.</span></h2>
-          <p class="lead">Pandavapura Railway Station is Located in Karnataka, Mandya, Shrirangapattana. It belongs to South Western Railway, Bangalore Cy Jn. Neighbourhood Stations are Shrirangapatna,Chandagirikopal, Near By major Railway Station is Mysore Jn</p>
+          <p class="lead">Pandavapura Railway Station is located in Karnataka, Mandya, Shrirangapattana. It belongs to South Western Railway, Bangalore Cy Jn. Neighbourhood Stations are Shrirangapatna,Chandagirikopal. Near by major Railway Station is Mysore Jn</p>
           <p><a class="btn btn-default" href="<%= trains_path %>" role="button">View details &raquo;</a></p>
         </div>
       </div>
@@ -108,8 +108,7 @@
       <div class="row featurette">
         <div class="col-md-6">
           <h2 class="featurette-heading">Governament Offices. <span class="text-muted">Go and get your document.</span></h2>
-          <p class="lead">Most of the taluk Governament offices are there in Pandavapura city but some of are there in related hobali head quatres.
-            "mini vidanashowda" is the center of attraction in this city. </p>
+          <p class="lead">Most of the taluk Governament offices are there in Pandavapura city, but some of them are in related Hobali head quaters. "mini vidanasouda" is the center of attraction in this city. </p>
             <p><a class="btn btn-default" href="<%= offices_path %>" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-6">
@@ -135,7 +134,7 @@
           <%= render :partial => "footer"%></br>
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+          <!-- <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
         </footer>
 
         <!-- </div> -->
