--- a/app/views/home_page/information.html.erb
+++ b/app/views/home_page/information.html.erb
@@ -27,7 +27,7 @@
 			<tr class="">
 				<td><h4><strong>Sri.K.S.Puttanniah</strong></h4></td>
 				<!-- <div class='verticalLine'></div> -->
-				<td><h4>Honorable Member of Legistrative Assembly  MLA</h4></td>
+				<td><h4>Honourable Member of Legislative Assembly  MLA</h4></td>
 				<td><h4>Kyathanahalli, Pandavapura Taluk, Mandya District</h4></td>
 				<td><h4>Off:08236254230 Home:08236254014 MOb:9481545667</h4></td>
 				<td><img src="assets/puttaninah 1.jpg" alt="First slide"></td>
@@ -37,7 +37,7 @@
 			</tr>
 			<tr class="">
 				<td><h4><strong>Sri.C.S. Puttaraju</strong></h4></td>
-				<td><h4>Honorable Lok Sabha Member MP</h4></td>
+				<td><h4>Honourable Lok Sabha Member MP</h4></td>
 				<td><h4>Krishna Nagara, 1stStage,Pandavapura [Taluk] Mandya[District]</h4></td>
 				<td><h4>9845113345</h4></td>
 				<td><img src="assets/cs puttaraju.jpg" alt="First slide"></td>
