--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -21,7 +21,7 @@
 			<tr>
 				<th class="entry-num">Hospital Name</th>
 				<th class="date">Type</th>
-				<th class="name">Adress</th>
+				<th class="name">Landmark</th>
 				<%# if current_user.has_role? :admin %>
 				<!-- <th class="action">Action</th> -->
 				<%# end %>
