--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,19 +1,21 @@
+<%= render :partial => "header"%>
 <div class="container" style="background:#eee; height: 2500px">
-<h1>Namma Pandavapura</h1>
-    <div class="header-border border_position"></div>
-    <%# if current_user.has_role? :admin %>
-	<div class="creat_school_btn">
-		<a class="btn btn-primary" href="/offices/new" type="submit">
-			Create New Place
-		</a>
-	</div>
-	<!-- <div class="new_villade_position">
+<!-- <h1>Namma Pandavapura</h1> -->
+	<h2>List of Offices in City</h2>
+	<div class="new_villade_position">
     	<a class="btn btn-primary" href="/" type="cancel">
     		Home
     	</a>
-    </div> -->
+    </div>
+    <div class="header-border border_position"></div>
+    <%# if current_user.has_role? :admin %>
+	<!-- <div class="creat_school_btn">
+		<a class="btn btn-primary" href="/offices/new" type="submit">
+			Create New Place
+		</a>
+	</div> -->
+	
 	<%# end %>
-	<h2><u>List of Offices in City</u></h2>
 	<!-- <div class="header-border"></div> -->
 	<% @office.each do |ofc|%>
 	<div>
@@ -22,7 +24,7 @@
 			<%= ofc.name %>
 		</div>
 		<div>
-			<h4 class="text_color_place">*Address:</h4>
+			<h4 class="text_color_place">*Landmark:</h4>
 			<%= ofc.address %>
 		</div>
 		<div>
@@ -36,11 +38,11 @@
         </div>
 
 		<%# if current_user.has_role? :admin %>
-		<div class="edit_btn_position">
-			<%= link_to "Edit", edit_office_path(ofc.id), :class=> "btn btn-primary", 'data-no-turbolink' => true %>
+		<!-- <div class="edit_btn_position">
+			<%#= link_to "Edit", edit_office_path(ofc.id), :class=> "btn btn-primary", 'data-no-turbolink' => true %>
 			
-			<%= link_to "Delete", office_path(ofc.id), :class=> "btn btn-primary", method: :delete, data: {confirm: 'Are u sure'} %>
-		</div>
+			<%#= link_to "Delete", office_path(ofc.id), :class=> "btn btn-primary", method: :delete, data: {confirm: 'Are u sure'} %>
+		</div> -->
 		<%# end %>
 	</div>
 	<div class="row journal-entry-devider"> </div>
