--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -21,7 +21,7 @@
         </li>
         <li class="">
           <a href="<%= mysoretrains_path %>" data-remote="true"
-             class="ui-tabs-anchor" id="preference_edit_favorite">Pandavapura - Mysure</a>
+             class="ui-tabs-anchor" id="preference_edit_favorite">Pandavapura - Mysore</a>
         </li>
         </ul>
     <div class="testing_ajax">
