--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container" style="background:#eee; height: 800px">
     <!-- <div class="jumbotron"> -->
     <%#= render :partial => "home_page/header" %>
-    <h2>List of VIllages in Pandavapura</h2>
+    <h2>List of Villages in Pandavapura</h2>
     <%# if current_user.has_role? :admin %>
       <!-- <div class="new_villade_position">
         <a class="btn btn-primary" href="/villages/new" type="submit">
