--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -12,7 +12,7 @@
       <div class="col-lg-2 col-md-2 col-sm-2  mob-paddingleft padding-right-none">
         <div class="footer-links"><a href='/information' data-remote = true>Information</a></div>
         <!-- <div class="footer-links"><a href="#">Watch Our Video  </a></div> -->
-        <div class="footer-links"><a href='/galary'>Galary</a> </div>
+        <div class="footer-links"><a href='/galary'>Gallery</a> </div>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-2  padding-left-none">
         <!-- <div class="footer-head">Mobile </div> -->
