--- a/app/views/mysoretrains/_index_form.html.erb
+++ b/app/views/mysoretrains/_index_form.html.erb
@@ -1,8 +1,8 @@
-<!-- <div class="creat_school_btn">
+<div class="creat_school_btn">
 		<a class="btn btn-primary" href="/mysoretrains/new" type="submit">
 			Create New Hospital
 		</a>
-	</div> -->
+	</div>
 <h2>Towards Mysore</h2>
 		<table class="table table-striped table-hover">
 			<thead>
