--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -5,11 +5,11 @@
     <%#= render :partial => "home_page/header" %>
     <h2>List of Villages in Pandavapura</h2>
     <%# if current_user.has_role? :admin %>
-      <!-- <div class="new_villade_position">
+      <div class="new_villade_position">
         <a class="btn btn-primary" href="/villages/new" type="submit">
           Create New Village
         </a>
-      </div> -->
+      </div>
       <div class="new_villade_position">
       <a class="btn btn-primary" href="/" type="cancel">
         Home
