--- a/app/views/buses/index.html.erb
+++ b/app/views/buses/index.html.erb
@@ -14,124 +14,124 @@
     	<div class="col-sm-6 col-xs-12">
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="Dailly 6:30 to 20:30 after 30 min each" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData1"><h3>* Mysore</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="Dailly 6:30 to 20:30 after 30 min each" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData1"><h3>* Mysore</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Badarahalli  :-  Dailly 6:30 to 20:30 after 30 min each " style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData2"><h3>* Mandya</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Badarahalli  :-  Dailly 6:30 to 20:30 after 30 min each " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Mandya</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
     			<a data-trigger="hover" data-placement="bottom" data-content="
-    			via Nagamangala  :-  5:45, 6:35, 7:00, 7:30, 8:00, 8:15, 8:40, 9:00, 9:10, 9:30, 10:00, 10:30, 11:00, 11:15, 11:30, 11:45, 12:00, 12:15, 12:30, 12:50, 13:10, 13:30, 14:00, 14:50, 15:00, 15:15, 15:45, 16:00, 16:30, 17:00, 17:35, 18:00, 18:45" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData3"><h3>* Tumukuru</h3></a>
+    			via Nagamangala  :-  5:45, 6:35, 7:00, 7:30, 8:00, 8:15, 8:40, 9:00, 9:10, 9:30, 10:00, 10:30, 11:00, 11:15, 11:30, 11:45, 12:00, 12:15, 12:30, 12:50, 13:10, 13:30, 14:00, 14:50, 15:00, 15:15, 15:45, 16:00, 16:30, 17:00, 17:35, 18:00, 18:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* Tumukuru</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via elekere  :-  Dailly 6:15 to 21:30 after 40 min each " style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData4"><h3>* K R pate</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via elekere  :-  Dailly 6:15 to 21:30 after 40 min each " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* K R pate</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via K R pate  :-  10:00, 10:30, 10:45, 14:15, 14:30 " style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData5"><h3>* Shivamogga</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via K R pate  :-  10:00, 10:30, 10:45, 14:15, 14:30 " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData5"><h3>* Shivamogga</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Nagamangala :- 12:30, 13:05, 14:05, 14:15, 18:45." style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData6"><h3>* Thuruvekere</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Nagamangala :- 12:30, 13:05, 14:05, 14:15, 18:45." style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData6"><h3>* Thuruvekere</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:15, 7:40, 8:40." style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData7"><h3>* Chicka magaluru</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="7:15, 7:40, 8:40." style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData7"><h3>* Chicka magaluru</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Sunkathonnur, Narahalli :- 7:15, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData8"><h3>* Shambonahalli</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Sunkathonnur, Narahalli :- 7:15, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData8"><h3>* Shambonahalli</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Anthanahalli :- 7:15, 6:30" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData9"><h3>* Kaveripura</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Anthanahalli :- 7:15, 6:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData9"><h3>* Kaveripura</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:45, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData10"><h3>* Anthanahalli</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="7:45, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData10"><h3>* Anthanahalli</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:00, 10:45, 18:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData11"><h3>* Kyathanahalli</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="7:00, 10:45, 18:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData11"><h3>* Kyathanahalli</h3></a>
     			</div>
     		</div>
     	</div>
     	<div class="col-sm-6 col-xs-12">
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="6:30, 7:30" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData12"><h3>* Mahadeshwara Hill</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="6:30, 7:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData12"><h3>* Mahadeshwara Hill</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="21:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData13"><h3>* K R S</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="21:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData13"><h3>* K R S</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="19:30" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData14"><h3>* K R Nagara</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="19:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData14"><h3>* K R Nagara</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Jakkanahalli :- 8:15, 16:45, 19:15, 21:05" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData15"><h3>* Melukote</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Jakkanahalli :- 8:15, 16:45, 19:15, 21:05" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData15"><h3>* Melukote</h3></a>
     			</div>
     		</div>
 
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Eregowdanahalli, Kodala, Kerethonnur :- 6:45, 7:45, 11:00, 13:00, 15:00, 16:45, 17:45, 19:45" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData16"><h3>* Narayanapura</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Eregowdanahalli, Kodala, Kerethonnur :- 6:45, 7:45, 11:00, 13:00, 15:00, 16:45, 17:45, 19:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData16"><h3>* Narayanapura</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Senaba, Kerethonnur :- 7:35, 09:30, 14:30, 17:30, 22:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData17"><h3>* Kamanayakanahalli</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Senaba, Kerethonnur :- 7:35, 09:30, 14:30, 17:30, 22:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData17"><h3>* Kamanayakanahalli</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Deshvalli, Chandre :- 7:30, 13:45, 16:45" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData18"><h3>* Pattanagere</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Deshvalli, Chandre :- 7:30, 13:45, 16:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData18"><h3>* Pattanagere</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
     			<a data-trigger="hover" data-placement="bottom" data-content="via Kodala :- 7:30, 10:00, 15:00, 17:00
-    			via Vaddarahalli :- 8:45, 14:10, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData19"><h3>* Chittanahalli</h3></a>
+    			via Vaddarahalli :- 8:45, 14:10, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData19"><h3>* Chittanahalli</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Chikkamarali, Chikade :- 7:45, 13:00, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData20"><h3>* Nuggahalli</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Chikkamarali, Chikade :- 7:45, 13:00, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData20"><h3>* Nuggahalli</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Dinka, Bannagadi :-7:30, 12:00, 14:30, 17:15" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData21"><h3>* Malligere</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Dinka, Bannagadi :-7:30, 12:00, 14:30, 17:15" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData21"><h3>* Malligere</h3></a>
     			</div>
     		</div>
     		<div class="form-group">
     			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Elekere, Haralakuppe :-9:15, 13:15, 16:00" style="text-align: justify;font-size: 14px;color: #54789a" id="popoverData22"><h3>* Syadanahalli, Bebi</h3></a>
+    			<a data-trigger="hover" data-placement="bottom" data-content="via Elekere, Haralakuppe :-9:15, 13:15, 16:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData22"><h3>* Syadanahalli, Bebi</h3></a>
     			</div>
     		</div>
     	</div>
@@ -141,7 +141,7 @@
 
 <script type="text/javascript">
     jQuery(document).ready(function($) {
-        evidenceTabControl();
+        evclassenceTabControl();
     });
     PopoverForEndorsment();
 </script>
