--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -9,11 +9,11 @@
     </div>
     <div class="header-border border_position"></div>
     <%# if current_user.has_role? :admin %>
-	<div class="creat_school_btn">
+	<!-- <div class="creat_school_btn">
 		<a class="btn btn-primary" href="/offices/new" type="submit">
 			Create New Place
 		</a>
-	</div>
+	</div> -->
 	
 	<%# end %>
 	<!-- <div class="header-border"></div> -->
