--- a/app/views/tourist_places/index.html.erb
+++ b/app/views/tourist_places/index.html.erb
@@ -2,11 +2,11 @@
 <div class="container" style="background:#eee; height: 2500px">
 <!-- <h1>Namma Pandavapura</h1> -->
     <%# if current_user.has_role? :admin %>
-	<div class="creat_school_btn">
+	<!-- <div class="creat_school_btn">
 		<a class="btn btn-primary" href="/tourist_places/new" type="submit">
 			Create New Place
 		</a>
-	</div>
+	</div> -->
 	<h2>List of Tourist Places</h2>
 	<div class="new_villade_position">
     	<a class="btn btn-primary" href="/" type="cancel">
