--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -189,3 +189,9 @@
         width: 100% !important;
     }
 }
+.image-position {
+    margin-top: -25px !important;
+}
+.custom-class {
+    float: right;
+}
