--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,32 +3,21 @@
   <div class="footer-border">
     <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-2  padding-right-none padding-right-none">
-        <!-- <div class="footer-head">iNotary</div> -->
-        <!-- <div class="footer-links"><a href="#">About Us </a></div> -->
         <div class="footer-links"><a href='<%= about_us_path %>'>About</a></div>
         <div class="footer-links"><a href='<%= contact_path %>'>Contact Us </a></div>
       </div>
       
       <div class="col-lg-2 col-md-2 col-sm-2  mob-paddingleft padding-right-none">
         <div class="footer-links"><a href='/information' data-remote = true>Information</a></div>
-        <!-- <div class="footer-links"><a href="#">Watch Our Video  </a></div> -->
         <div class="footer-links"><a href='/galary'>Gallery</a> </div>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-2  padding-left-none">
-        <!-- <div class="footer-head">Mobile </div> -->
-        <!-- <div class="footer-links"><a href="#">IOS </a></div> -->
-        <!-- <div class="footer-links"><a href="#">Android </a> </div> -->
         <div class="footer-links"><a href="#">&nbsp;</a> </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 social-icon-align">
         <div class="social-icons-margin social-icon-position">
-            <%= link_to image_tag('fc.png'), "/auth/facebook", id: "sign_in" %>
-            <%= link_to image_tag("images (1).jpg"), "/auth/twitter" %>
-          <!-- <a href="" class="iconsprite-twitter" target="_blank"> </a>
-          <a href="" class="iconsprite-fb" target="_blank"> </a>
-          <a href="" class="iconsprite-msg"> </a>
-          <a href="" class="iconsprite-contact"> </a> -->
-
+            <%#= link_to image_tag('fc.png'), "/auth/facebook", id: "sign_in" %>
+            <%#= link_to image_tag("images (1).jpg"), "/auth/twitter" %>
         </div>
         <div class="trust-logo">
           <a href="#">
