--- a/app/views/buses/index.html.erb
+++ b/app/views/buses/index.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => "header"%>
-<div class="container" style="background:#eee; height: 1000px">
+<div class="container">
 
 	<h2>Bus timings in Pandavapura</h2>
 	<div class="new_villade_position">
