--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background:#eee; height: 1000px">
+<div class="container">
 <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
 	<div class="creat_school_btn">
