--- a/app/views/home_page/contact.html.erb
+++ b/app/views/home_page/contact.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => "header"%>
-<div class="container container-min-height" id="content" style="background:#eee; height: 700px">
+<div class="container container-min-height" id="content">
 <!-- <h1>Namma Pandavapura</h1> -->
 <h2>Contact Us </h2>
     <div class="new_villade_position">
