--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => "header"%>
-<div class="container" style="background:#eee; height: 2500px">
+<div class="container">
 <!-- <h1>Namma Pandavapura</h1> -->
 	<h2>List of Offices in City</h2>
 	<div class="new_villade_position">
