--- a/app/views/offices/new.html.erb
+++ b/app/views/offices/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Offices#new</h1>
 <p>Find me in app/views/offices/new.html.erb</p>
 <div class="navbar-wrapper">
-	<div class="container" style="background:#eee; height: 600px">
+	<div class="container">
 		<div class="jumbotron">
 		<h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
