--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -1,6 +1,6 @@
 <!-- <div class="navbar-wrapper"> -->
     <%= render :partial => "header"%>
-  <div class="container" style="background:#eee; height: 800px">
+  <div class="container">
     <!-- <div class="jumbotron"> -->
     <%#= render :partial => "home_page/header" %>
     <h2>List of Villages in Pandavapura</h2>
