--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-wrapper">
-	<div class="container" style="background:#eee;">
+	<div class="container">
 		<div class="jumbotron">
 		<h1>Namma Pandavapura</h1>
         <div class="header-border border_position"></div>
