--- a/app/views/home_page/about_us.html.erb
+++ b/app/views/home_page/about_us.html.erb
@@ -1,10 +1,10 @@
 <div class="navbar-wrapper">
 <%= render :partial => "header"%>
-	<div class="container" style="background:#eee; height: 700px">
+	<div class="container">
         <h2>About Pandavapura</h2>
 	<!-- <h1>Namma Pandavapura</h1> -->
     <div class="new_villade_position">
-        <a class="btn btn-primary" href="/" type="cancel">
+        <a class="btn btn-primary" href="<%= root_path %>" type="cancel">
             Home
         </a>
     </div>
