--- a/app/views/home_page/information.html.erb
+++ b/app/views/home_page/information.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wrapper">
 <%= render :partial => "header"%>
-	<div class="container" style="background:#eee; height: 1200px">
+	<div class="container">
 		<!-- <h1>Namma Pandavapura</h1> -->
 		<h2>Elected Representatives</h2>
 		<div class="new_villade_position">
